fringe: add dataverse meeting

--- a/content/fringe-events.yaml
+++ b/content/fringe-events.yaml
@@ -118,6 +118,15 @@ events:
         website: https://lists.launchpad.net/kicad-developers/msg42419.html
         contact: seth@kipro-pcb.com
 
+    'FOSDEM''20 Dataverse Fringe Meeting':
+        location: Brussels, BE
+        start: 2020-01-31
+        end: 2020-01-31
+        cost: Free
+        registration: Required
+        website: http://www.arch.be/index.php?l=en&m=news&r=agenda&e=fosdem-20-dataverse-fringe-meeting
+        contact: benjamin.peuch@arch.be
+
     'FOSS license and security compliance tools workshop':
         location: Brussels, BE
         start: 2020-01-31
