--- a/content/navigation.yaml
+++ b/content/navigation.yaml
@@ -22,6 +22,7 @@ footer:
     - Archives: /archives
   - This year:
     - /schedule
+    - /stands
     - /certification
     - /keysigning
     - /volunteer
@@ -38,4 +39,4 @@ footer:
     - /interviews
     - Video recordings: 'https://video.fosdem.org/'
     - /social
-#   - /support/promote
+    - /support/promote
