stands: tweak some names

--- a/content/stands-accepted.yaml
+++ b/content/stands-accepted.yaml
@@ -73,7 +73,7 @@ days:
     - Open Source Design
     - MIT App Inventor
     - Pharo
-    - Ntopng
+    - ntopng
     - Open Source Test Management
     - Tracim
     - Free Culture Podcasts
