Fringe events: fix typo

--- a/content/fringe-events.yaml
+++ b/content/fringe-events.yaml
@@ -226,7 +226,7 @@ events:
         website: https://opencast.org/2019-12-30-opencast-dev-n-hack-camp.html
         contact: lkiesow@uos.de
 
-    'OpenEmebdded Workshop':
+    'OpenEmbedded Workshop':
         location: Brussels, BE
         start: 2020-02-03
         end: 2020-02-03
