Biskuit changed to AlekSIS

--- a/content/stands-accepted.yaml
+++ b/content/stands-accepted.yaml
@@ -21,7 +21,7 @@ days:
     - KDE
     - GNOME
     - CoderDojo
-    - Skolelinux / BiscuIT / Teckids
+    - Skolelinux / AlekSIS / Teckids
     - 0 A.D.
     - Godot Engine
     - Raku
