--- a/content/navigation.yaml
+++ b/content/navigation.yaml
@@ -26,7 +26,7 @@ footer:
     - /certification
     - /keysigning
     - /volunteer
-#   - /beerevent
+    - /beerevent
     - /fringe
   - Practical information:
     - Getting there: /practical/transportation
