fringe: add Apache Camel Social Event

--- a/content/fringe-events.yaml
+++ b/content/fringe-events.yaml
@@ -199,6 +199,15 @@ events:
         website: https://hsbxl.be/events/byteweek/2020/opensourcedesign/
         contact: belenbarrospena@gmail.com
 
+    'Apache Camel Social Event':
+        location: Brussels, BE
+        start: 2020-02-01
+        end: 2020-02-01
+        cost: Own drinks
+        registration: None
+        website: https://camel.apache.org/blog/FOSDEM-2020/
+        contact: zregvart@apache.org
+
     'OFFDEM':
         location: Brussels, BE
         start: 2020-02-01
