fringe: add IndieHosters 5th birthday

--- a/content/fringe-events.yaml
+++ b/content/fringe-events.yaml
@@ -199,6 +199,15 @@ events:
         website: https://sites.google.com/view/great-brexit-pub-crawl
         contact: cheryljhung@gmail.com
 
+    'IndieHosters 5th birthday!':
+        location: Brussels, BE
+        start: 2020-01-31
+        end: 2020-01-31
+        cost: Free
+        registration: None
+        website: https://forum.indie.host/t/indiehosters-5th-birthday-in-brussels-31st-january-2020-offdem/3377
+        contact: pierre@ozoux.net
+
     'Learn to Code KiCad':
         location: Brussels, BE
         start: 2020-01-31
