Add variable to indicate virtual
Use it to hide keynotes and job corner.
Ignore case when sorting stands.

--- a/content/navigation.yaml
+++ b/content/navigation.yaml
@@ -34,7 +34,7 @@ footer:
 #   - /practical/accommodation
     - /practical/conduct
     - /practical/services
-    - /practical/jobcorner
+#    - /practical/jobcorner
   - Media and press:
     - /interviews
 #   - Video recordings: 'https://video.fosdem.org/'
