Ugly but it works - also fixes a divide by zero error

--- a/content/navigation.yaml
+++ b/content/navigation.yaml
@@ -30,6 +30,7 @@ footer:
     - /fringe
   - Practical information:
 #   - Getting there: /practical/transportation
+    - /practical/online
     - /practical/accessibility
 #   - /practical/accommodation
     - /practical/conduct
