Added stands, removed location links that don't do anything, cleaned up some pages

--- a/content/navigation.yaml
+++ b/content/navigation.yaml
@@ -38,7 +38,7 @@ footer:
     - /practical/services
 #    - /practical/jobcorner
   - Media and press:
-    - /interviews
+#    - /interviews
 #   - Video recordings: 'https://video.fosdem.org/'
     - /social
 #   - /support/promote
