--- a/config.yaml
+++ b/config.yaml
@@ -197,4 +197,9 @@ news:
   news_page_items: 6
 
 virtual: true
-go_live: false
+go_live: true
+
+# Use this to build the site as it will appear at a specific time
+# Example: "2021-02-06 14:15:00.000000000 +0100"
+override_time: false
+schedule_time: ""
