Update link for openharmony stand

--- a/content/stands-chatroom.yaml
+++ b/content/stands-chatroom.yaml
@@ -21,7 +21,7 @@ stands_chatroom_link:
   ntop: ntop
   onlyoffice: onlyoffice
   openembedded: openembedded
-  openharmony: openharmony
+  openharmony: openharmony_project
   openmandriva: openmandriva
   opentap: opentap
   openuk: openuk
