Update chatroom links for stands

--- a/content/stands-chatroom.yaml
+++ b/content/stands-chatroom.yaml
@@ -4,6 +4,7 @@ stands_chatroom_link:
   civicrm: civicrm
   coderdojo: coderdojo_belgium
   debian: debian
+  eclipse: eclipse-foundation
   foreman: foreman
   fossasia: fossasia
   fsfe: free_software_foundation_europe
