Fix kde stand link

--- a/content/stands-chatroom.yaml
+++ b/content/stands-chatroom.yaml
@@ -11,6 +11,7 @@ stands_chatroom_link:
   freebsd: freebsd_project
   gitlab: gitlab
   gsoc: google_summer_of_code
+  kde: kde_community
   kiwi: kiwi_tcms
   kopano: kopano
   libreoffice: libreoffice
