--- a/content/stands-chatroom.yaml
+++ b/content/stands-chatroom.yaml
@@ -1,4 +1,5 @@
 stands_chatroom_link:
+  apache: the_apache_software_foundation
   box86: box86
   checkmk: checkmk
   civicrm: civicrm
@@ -10,6 +11,7 @@ stands_chatroom_link:
   fsfe: free_software_foundation_europe
   freebsd: freebsd_project
   gitlab: gitlab
+  gnome: the_gnome_foundation
   gsoc: google_summer_of_code
   kde: kde_community
   kiwi: kiwi_tcms
