--- a/content/navigation.yaml
+++ b/content/navigation.yaml
@@ -33,6 +33,7 @@ footer:
   - Practical information:
 #   - Getting there: /practical/transportation
     - /practical/online
+    - /practical/matrixtrouble
     - /practical/accessibility
 #   - /practical/accommodation
     - /practical/conduct
