Add 2022 T-shirts and hoodies.

--- a/content/navigation.yaml
+++ b/content/navigation.yaml
@@ -21,6 +21,7 @@ footer:
     - About: /about
     - /about/sponsors
     - /support/donate
+    - T-shirts and hoodies: /tshirts
     - /faq
     - Archives: /archives
   - This year:
@@ -37,6 +38,7 @@ footer:
 #   - Getting there: /practical/transportation
 #   - /practical/online
 #   - /practical/matrix_troubleshooting
+    - T-shirts and hoodies: /tshirts
     - /practical/accessibility
 #   - /practical/accommodation
     - /practical/conduct
