--- a/config.yaml
+++ b/config.yaml
@@ -196,9 +196,9 @@ news:
   items_on_index_page: 3
   news_page_items: 6
 
-virtual: true
-go_live: true
-matrix_works: true
+virtual: false
+go_live: false
+matrix_works: false
 
 # Use this to build the site as it will appear at a specific time
 # Example: "2021-02-06 14:15:00.000000000 +0100"
