add covid policy

--- a/content/navigation.yaml
+++ b/content/navigation.yaml
@@ -43,6 +43,7 @@ footer:
 #   - /practical/accommodation
     - /practical/conduct
     - /practical/services
+    - /practical/covid
 #    - /practical/jobcorner
   - Media and press:
 #    - /interviews
