--- a/content/fringe-events.yaml
+++ b/content/fringe-events.yaml
@@ -2,8 +2,17 @@
 kind: internal
 events:
 
+    'Guix Days':
+        location: ICAB, 8  rue Amedee Lynenstraat, 1210 Brussels
+        start: 2022-02-02
+        end: 2022-02-03
+        cost: Free
+        registration: None
+        website: https://libreplanet.org/wiki/Group:Guix/FOSDEM2023
+        contact: guix-devel@gnu.org
+
     'pre-FOSDEM MySQL Days':
-        location: ICAB Incubator 4 Rue des Pères Blancs 1040 Bruxelles
+        location: ICAB Incubator 4 Rue des Pères Blancs 1040 Brussels
         start: 2022-02-02
         end: 2022-02-02
         cost: Free
@@ -16,25 +25,70 @@ events:
         start: 2023-02-03
         end: 2023-02-03
         cost: Free
-        registration: Space limited.  Registration recommended.
+        registration: Recommended. Space limited.
         website: https://connect.centos.org/
         contact: shaunm@redhat.com
+
+    'CHAOSScon':
+        location: Bedford Hotel & Congress Centre Zuidstraat 135 Rue du Midi 1000 Brussels
+        start: 2023-02-03
+        end: 2023-02-03
+        cost: $10
+        registration: Recommended. Space limited.
+        website: https://chaoss.community/chaosscon-2023-eu/
+        contact: germonprez@gmail.com
+
+    'DuckCon':
+        location: Hilton Brussels Grand Place/Grote Markt
+        start: 2023-02-03
+        end: 2023-02-03
+        cost: Free
+        registration: https://www.meetup.com/duckdb/events/289021740/
+        website: https://duckdb.org/2022/11/25/duckcon.html
+        contact: pedro@duckdblabs.com
 
     'FOSDEM PGDay':
         location: Brussels
         start: 2023-02-03
         end: 2023-02-03
         cost: 50 EUR
-        registration: Registration required, but open to anybody who pays.
+        registration: Required
         website: https://2023.fosdempgday.org/
         contact: contact@fosdempgday.org
+
+    'FreeCAD meeting day':
+        location: Atelier des Tanneurs, Huidevettersstraat 60A Rue des Tanneurs, 1000 Brussels
+        start: 2023-02-03
+        end: 2023-02-03
+        cost: Free
+        registration: None, but space limited
+        website: https://fpa.freecad.org/programs/freecad-day-2023
+        contact: yorik@freecad.org
+
+    'Matrix Community Meetup':
+        location: Hackerspace Brussels (HSBXL), Klein eilandstraat 1 Rue de la Petite Île, 1070 Anderlecht
+        start: 2023-02-03
+        end: 2023-02-03
+        cost: Free 
+        registration: None
+        website: https://matrix.to/#/%23fosdem23-community-meetup:matrix.org
+        contact: fosdem23-matrix-meetup@matrix.datanauten.de
+
+    'Tool The Docs Pre-FOSDEM Meetup':
+        location: Le Grenier d'Elvire, Chaussée de Boondaelsesteenweg 339, 1050 Elsene/Ixelles
+        start: 2023-02-03
+        end: 2023-02-03
+        cost: lunch around 25 EUR
+        registration: None
+        website: https://www.meetup.com/write-the-docs-berlin/events/290471112/
+        contact: ffloreth@redhat.com
 
     'OpenEmbedded Workshop 2023':
         location: Brussels
         start: 2023-02-06
         end: 2023-02-06
         cost: 50 / 75 EUR
-        registration: Registration required
+        registration: Required
         website: https://pretalx.com/openembedded-workshop-2023/
         contact: philip@balister.org
 
@@ -46,4 +100,13 @@ events:
         registration: Preregistration required for Crowd control purposes
         website: https://cfgmgmtcamp.eu/ghent2023/
         contact: info@cfgmgmtcamp.eu
+
+    'State of Open Conference':
+        location: Queen Elizabeth II Centre, Parliament Square, London
+        start: 2023-02-07
+        end: 2023-02-08
+        cost: 199 GBP
+        registration: Required
+        website: https://stateofopencon.com/
+        contact: lorna.mitchell@openuk.uk
 
