update fringe item as per organiser_s request

--- a/content/fringe-events.yaml
+++ b/content/fringe-events.yaml
@@ -108,5 +108,5 @@ events:
         cost: 199 GBP
         registration: Required
         website: https://stateofopencon.com/
-        contact: lorna.mitchell@openuk.uk
+        contact: admin@openuk.uk
 
